# brettspill

./: .gitignore  DB.sql  Dockerfile  Dockerfile.prod  Dockerfile.traefik  README.md  ddclient.conf  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  notes.txt  package-lock.json  pyproject.toml  pytest.ini  settings.json  traefik.dev.yml  traefik.prod.yml  traefik.routes.dev.yml  traefik.yml
api/: models.py
api/migrations/: 0001_initial.py
app/: brettspill-test.env  conftest.py  database-test.env  manage.py  package-lock.json  package.json  pytest.ini  webpack-stats.json  webpack.config.js
app/api/: models.py  serializers.py
app/api/migrations/: 0001_initial.py
app/brettspill_py/: asgi.py  settings.py  urls.py
app/frontend/: es6 tips.txt  resttest.http  urls.py  views.py
app/frontend/spec/: helloWorldSpec.mjs  onceSpec.mjs
app/frontend/src/: App.js  ch5.js  index.css  index.js
app/frontend/test/: ch6.js  sum.js
app/gomoku/: urls.py  views.py
app/gomoku/src/: index.js
app/lobby/: admin.py  forms.py  models.py  serializers.py  test.py  urls.py  views.py
app/tests/: conftest.py  settings.py  test_create_spiller.py  test_settings.py
brettspill/: apps.py  urls.py  views.py
brettspill_db/: postgres.conf
brettspill_py/: settings.py  urls.py  wsgi.py
frontend/: babel.config.cjs  babel.config.js  package-lock.json  package.json  views.py  webpack.config.cjs  webpack.config.js
frontend/spec/: helloWorldSpec.mjs  once.js  onceSpec.mjs
frontend/src/: helloWorld.js  test.js
frontend/test/: ch6.test.js  logging.js
gomoku/: .yo-rc.json  package.json  views.py  webpack.config.js
gomoku/src/: index.css  test.js
lobby/: urls.py  views.py
nginx/: brettspill.dev.conf
register/: urls.py  views.py
templates/brettspill/: base.html
templates/frontend/: test.html
templates/gomuku/: index.html  test.html
templates/register/: register.html
templates/registration/: login.html
(+33 files in other folders)
